[gd_scene load_steps=7 format=3 uid="uid://bg3a7bimyvpac"]

[ext_resource type="Script" path="res://Room-Objects/clickable_object.gd" id="1_7x8kl"]
[ext_resource type="Texture2D" uid="uid://bn2fmxbvcksm8" path="res://Sprites/minaFish.png" id="2_l4k2r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o10kh"]
size = Vector2(88, 56)

[sub_resource type="Animation" id="Animation_xy4el"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_kw54o"]
resource_name = "hover"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wr4gq"]
_data = {
"RESET": SubResource("Animation_xy4el"),
"hover": SubResource("Animation_kw54o")
}

[node name="ClickableObject" type="Area2D"]
script = ExtResource("1_7x8kl")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -2)
shape = SubResource("RectangleShape2D_o10kh")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(3, 3)
texture = ExtResource("2_l4k2r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_wr4gq")
}

[connection signal="clicked" from="." to="." method="_on_clicked"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
